# final-fortune

./: LICENSE  README.md  final-fortune.cabal
app/: NumberOfWins.hs  Replay.hs  TestDraw.hs
decks/: med.dec  test.dec  test2.dec  test3.dec
notes/: TODO.md  potential-cards.md  project-plan.md
src/: Card.hs  CardDB.hs  Debug.hs  Deck.hs  DynamicSearch.hs  GameState.hs  MagicEffects.hs  Mana.hs
test/: ManaSpec.hs
